# authly

./: .dockerignore  .gitignore  404.html  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  bacon.toml  configuration.html  deny.toml  docker-compose.dev.yml  documents.html  getting_started.html  index.html  justfile  print.html  searcher-c2a407aa.js  searchindex-ac8788d2.js  searchindex.js  searchindex.json  testservice.Dockerfile  toc-602ca015.js  toc.html  toc.js
benches/: authly_benches.rs
crates/authly/: Cargo.toml
crates/authly-client/: Cargo.toml
crates/authly-client/src/: identity.rs  lib.rs  token.rs
crates/authly-common/: Cargo.toml
crates/authly-common/proto/: authly_service.proto
crates/authly-common/src/: access_token.rs  document.rs  id.rs  lib.rs  property.rs  proto.rs  service.rs
crates/authly-common/src/policy/: code.rs  mod.rs  pdp.rs
crates/authly-domain/: Cargo.toml
crates/authly-domain/src/: access_token.rs  document.rs  lib.rs
crates/authly-end2end/: Cargo.toml
crates/authly-end2end/src/: lib.rs  test_auth.rs  test_auth_access_control.rs  test_service.rs  test_tls.rs
crates/authly-pip/: Cargo.toml
crates/authly-pip/src/: lib.rs
crates/authly-proto/: Cargo.toml
crates/authly-proto/proto/: authly_service.proto
crates/authly-test/: Cargo.toml  README.md
crates/authly-test/src/: lib.rs  main.rs  test_auth.rs  test_service.rs  test_tls.rs  tls.rs
crates/authly-testservice/: Cargo.toml  README.md
crates/authly-testservice/src/: main.rs
crates/authly/benches/: authly_benches.rs
crates/authly/migrations/: 1_init.sql
crates/authly/src/: access_control.rs  access_token.rs  auth.rs  authority.rs  broadcast.rs  cert.rs  config.rs  env_config.rs  kubernetes.rs  lib.rs  main.rs  mtls.rs  session.rs  testdata.rs  user.rs  user_auth.rs
crates/authly/src/compiler/: compiled_document.rs  doc_compiler.rs  mod.rs
crates/authly/src/db/: config_db.rs  document_db.rs  entity_db.rs  mod.rs  service_db.rs  session_db.rs  sqlite.rs
crates/authly/src/document/: compiled_document.rs  doc_compiler.rs  load.rs  mod.rs  tests.rs
crates/authly/src/k8s/: k8s_auth_server.rs  k8s_manager.rs
crates/authly/src/openapi/: admin.rs  router.rs  user_auth.rs
crates/authly/src/policy/: compiler.rs  error.rs  mod.rs  test_compile.rs  test_expr.rs
crates/authly/src/policy/compiler/: codegen.rs  expr.rs  parse_check.rs  parser.rs  pest_parse.rs
crates/authly/src/proto/: mod.rs  service_server.rs
crates/authly/src/util/: protocol_router.rs
crates/authly/tests/integration/: main.rs  test_access_control.rs  test_document.rs
docs/: book.toml
examples/: 0_rudiments.toml  0_testusers.toml  1_testservice.toml  1_testusers.toml  2_arx.toml  2_gateway.toml  2_testservice.toml  README.md  testservice.toml  testusers.toml
grammar/: policy.pest
lib/authly-connect/: Cargo.toml
lib/authly-connect/src/: client.rs  lib.rs  no_trust_verifier.rs  server.rs  tunnel.rs
lib/authly-db/: Cargo.toml
lib/authly-db/src/: hql.rs  lib.rs  literal.rs  param.rs  sqlite.rs  sqlite_handle.rs  sqlite_pool.rs
lib/authly-domain/: Cargo.toml
lib/authly-domain/grammar/: policy.pest
lib/authly-domain/migrations/: 1_init.sql
lib/authly-domain/src/: access_control.rs  access_token.rs  builtins.rs  bus.rs  cert.rs  ctx.rs  dev.rs  directory.rs  encryption.rs  error.rs  id.rs  instance.rs  lib.rs  login.rs  login_session.rs  migration.rs  persona_directory.rs  remote_addr.rs  service.rs  session.rs  tls.rs  webauthn.rs
lib/authly-domain/src/bus/: handler.rs  service_events.rs
lib/authly-domain/src/document/: compiled_document.rs  doc_compiler.rs  error.rs  mod.rs
lib/authly-domain/src/extract/: auth.rs  base_uri.rs  mod.rs
lib/authly-domain/src/policy/: compiler.rs  error.rs  mod.rs  test_compile.rs
lib/authly-domain/src/policy/compiler/: codegen.rs  expr.rs  parser.rs
lib/authly-domain/src/repo/: crypto_repo.rs  directory_repo.rs  document_repo.rs  entity_repo.rs  init_repo.rs  mod.rs  oauth_repo.rs  service_repo.rs  webauthn_repo.rs
lib/authly-hiqlite/: Cargo.toml
lib/authly-hiqlite/src/: lib.rs
lib/authly-secrets/: Cargo.toml
lib/authly-secrets/src/: bao.rs  lib.rs  local_unencrypted.rs
lib/authly-service/: Cargo.toml
lib/authly-service/src/: lib.rs
lib/authly-service/src/authority_mandate/: mod.rs  submission.rs
lib/authly-service/src/authority_mandate/submission/: authority.rs  mandate.rs
lib/authly-service/src/openapi/: admin.rs  mod.rs  router.rs  user_auth.rs
lib/authly-service/src/proto/: mandate_submission.rs  mod.rs  service_server.rs
lib/authly-service/src/repo/: mod.rs
lib/authly-sqlite/: Cargo.toml
lib/authly-sqlite/src/: lib.rs  manager.rs  param.rs  row.rs
lib/authly-test/: Cargo.toml
lib/authly-test-grpc/: Cargo.toml  build.rs
lib/authly-test-grpc/proto/: test_grpc.proto
lib/authly-test-grpc/src/: lib.rs
lib/authly-test/benches/: authly_benches.rs
lib/authly-test/src/: lib.rs  test_ctx.rs  util.rs
lib/authly-test/src/tests/: mod.rs  test_access_control.rs  test_authly_connect.rs  test_authority_mandate.rs  test_demo.rs  test_docs_clause_examples.rs  test_docs_full_example.rs  test_document.rs  test_metadata.rs  test_tls.rs  test_ultradb.rs  test_webauthn.rs
lib/authly-test/src/tests/end2end/: mod.rs  test_auth_access_control.rs
lib/authly-web/: Cargo.toml
lib/authly-web/src/: app.rs  auth.rs  lib.rs
lib/authly-web/src/app/: persona.rs  tabs.rs
lib/authly-web/src/auth/: oauth.rs
lib/authly-web/src/tests/: mod.rs  test_oauth.rs
lib/authly-webstatic/: Cargo.toml  README.md  build.rs  update.sh
lib/authly-webstatic/src/: lib.rs
lib/authly-webstatic/static/: app.css  auth.css  fonts.css  style.css
migrations/: 1_init.sql
src/: access_control.rs  access_token.rs  audit.rs  authority.rs  broadcast.rs  cert.rs  ctx.rs  directory.rs  encryption.rs  env_config.rs  id.rs  instance.rs  lib.rs  load_docs.rs  login.rs  main.rs  mtls.rs  persona_directory.rs  serde_util.rs  service.rs  session.rs  settings.rs  test_ctx.rs  tls.rs  tunnel.rs  web.rs  webauth.rs
test/: .gitignore  (+4 more)
(+129 files in other folders)
