[package]
name = "authly"
edition = "2021"
publish = false
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[[bin]]
name = "authly"
path = "src/main.rs"
test = false

[features]
dev = []

[dependencies]
authly-common = { workspace = true, features = [
    "access_token",
    "document",
    "mtls_server",
    "tonic_server",
] }
authly-connect = { path = "lib/authly-connect" }
authly-db = { path = "lib/authly-db" }
authly-domain = { path = "lib/authly-domain" }
authly-hiqlite = { path = "lib/authly-hiqlite" }
authly-service = { path = "lib/authly-service" }
authly-secrets = { path = "lib/authly-secrets" }
authly-web = { path = "lib/authly-web" }
authly-webstatic = { path = "lib/authly-webstatic" }

aes-gcm-siv = "0.11"
anyhow = "1"
arc-swap = "1.7"
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
blake3 = "1.5"
clap = { version = "4", features = ["derive"] }
cookie = "0.18"
figment = { version = "0.10", features = ["env"] }
futures-util = "0.3"
hex = { version = "0.4", features = ["serde"] }
hexhex = "1"
hiqlite.workspace = true
http = "1"
indexmap = "2.7"
indoc = "2"
int-enum = "1"
hostname = "0.4"
hyper = { version = "1", default-features = false }
jsonwebtoken = "9"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = "0.98"
mimalloc = "0.1.43"
num-derive = "0.4"
num-traits = "0.2"
openraft = { version = "0.9", default-features = false }
rand = "0.8"
rcgen.workspace = true
reqwest.workspace = true
rustls = { version = "0.23", default-features = false }
secrecy = "0.10"
serde = "1"
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["io"] }
tonic = { version = "0.12", default-features = false }
tower = { version = "0.5", features = ["steer"] }
tower-server = { workspace = true, features = ["signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
] }
webpki-roots = "0.26"

[workspace]
members = [
    "bin/authly-testservice",
    "lib/authly-connect",
    "lib/authly-db",
    "lib/authly-domain",
    "lib/authly-hiqlite",
    "lib/authly-secrets",
    "lib/authly-service",
    "lib/authly-sqlite",
    "lib/authly-test",
    "lib/authly-test-grpc",
    "lib/authly-web",
    "lib/authly-webstatic",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Protojour dev team <devs@protojour.com>"]
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/protojour/authly"
rust-version = "1.83"
publish = false

[workspace.dependencies]
authly-common = { git = "https://github.com/protojour/authly-lib.git" }
authly-client = { git = "https://github.com/protojour/authly-lib.git" }
hiqlite = { git = "https://github.com/sebadob/hiqlite.git", default-features = false, features = [
    "auto-heal",
    "listen_notify_local",
    "sqlite",
] }
rcgen = { git = "https://github.com/rustls/rcgen.git", features = [
    "x509-parser",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "rustls-tls",
] }
tower-server = "0.3.1"
