[workspace]
members = [
    "bin/authly",
    "bin/authly-testservice",
    "bin/authly-webdev",
    "lib/authly-connect",
    "lib/authly-db",
    "lib/authly-domain",
    "lib/authly-hiqlite",
    "lib/authly-secrets",
    "lib/authly-service",
    "lib/authly-sqlite",
    "lib/authly-test",
    "lib/authly-test-grpc",
    "lib/authly-web",
    "lib/authly-webstatic",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
authors = ["Protojour dev team <devs@protojour.com>"]
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/protojour/authly"
rust-version = "1.83"
publish = false

[workspace.dependencies]
authly-common = { git = "https://github.com/protojour/authly-lib.git" }
authly-client = { git = "https://github.com/protojour/authly-lib.git" }
hiqlite = { git = "https://github.com/sebadob/hiqlite.git", default-features = false, features = [
    "auto-heal",
    "listen_notify_local",
    "sqlite",
] }
rcgen = { git = "https://github.com/rustls/rcgen.git", features = [
    "x509-parser",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "rustls-tls",
] }
tower-server = "0.3.1"
webauthn-authenticator-rs = { git = "https://github.com/protojour/webauthn-rs.git", branch = "without-openssl-build-dependency", default-features = false, features = [
    "softtoken",
] }
webauthn-rs = { git = "https://github.com/protojour/webauthn-rs.git", branch = "without-openssl-build-dependency", features = [
    "danger-allow-state-serialisation",
] }
webauthn-rs-proto = { git = "https://github.com/protojour/webauthn-rs.git", branch = "without-openssl-build-dependency" }
