[package]
name = "authly-client"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = true

[dependencies]
authly-common = { path = "../authly-common", features = ["access_token"] }
authly-proto.path = "../authly-proto"
anyhow = "1"
fnv = "1"
http = "1"
jsonwebtoken = "9"
pem = "3"
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "rustls-tls",
] }
rcgen = { git = "https://github.com/audunhalland/rcgen.git", branch = "sign-using-params" }
thiserror = "2"
tonic = { version = "0.12", default-features = false, features = ["tls"] }
tracing = "0.1"
x509-parser = "0.16"
