[package]
name = "authly-common"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = true

[features]
document = ["dep:serde_spanned", "dep:toml", "dep:uuid"]
access_token = []

[dependencies]
anyhow = "1"
byteorder = "1"
fnv = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_spanned = { version = "0.6", optional = true }
thiserror = "2"
toml = { version = "0.8", optional = true }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"], optional = true }

[dev-dependencies]
indoc = "2"
