[package]
name = "authly-domain"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = true

[dependencies]
anyhow = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_spanned = "0.6"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
indoc = "2"
