[package]
name = "authly-pip"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
authly-common.path = "../authly-common"
authly-policy.path = "../authly-policy"
bit-set = "0.8"
rand = "0.8"
tracing = "0.1"
unsigned-varint = "0.8"

[dev-dependencies]
