[package]
name = "authly-proto"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
prost = "0.13"
tonic = { version = "0.12", default-features = false, features = [
    "prost",
    "codegen",
    "transport",
] }

[build-dependencies]
tonic-build = "0.12"
