[package]
name = "authly-test"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
authly.path = "../authly"
authly-client.workspace = true
authly-common.workspace = true
anyhow = "1"
axum = "0.7"
cookie = "0.18"
hyper = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "rustls-tls",
] }
rcgen = { git = "https://github.com/rustls/rcgen.git", branch = "main", features = [
    "x509-parser",
] }
rustls = "0.23"
serde_json = "1"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tokio-util = "0.7"
tower-server = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
] }
x509-parser = "0.16"

[dev-dependencies]
