[package]
name = "authly-testservice"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
authly-client.workspace = true
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
] }

[dev-dependencies]
