[package]
name = "authly-testservice"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
authly-client = { workspace = true, features = ["rustls_023"] }
authly-common = { workspace = true, features = ["mtls_server"] }
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
indoc = "2"
maud = { version = "0.26", features = ["axum"] }
rustls = "0.23"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tower-server = { workspace = true, features = ["signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
] }
