[package]
name = "authly"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
authly-proto.path = "../authly-proto"

anyhow = "1"
argon2 = "0.5"
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
bit-set = "0.8"
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["env"] }
hex = "0.4"
http = "1"
hiqlite = { version = "0.3", default-features = false, features = ["sqlite", "auto-heal"] }
hostname = "0.4"
hyper = { version = "1", default-features = false }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = "0.98"
pem = "3"
postcard = { version = "1", default-features = false, features = ["use-std"] }
rand = "0.8"
rcgen = { git = "https://github.com/audunhalland/rcgen.git", branch = "sign-using-params", features = ["x509-parser"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
rust-embed = "8"
rustls = "0.23"
rustls-pemfile = "2"
serde = "1"
serde_json = "1"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7"
tonic = { version = "0.12", default-features = false }
tower = { version = "0.5", features = ["steer"] }
tower-server = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
] }
unsigned-varint = "0.8"

[dev-dependencies]
