[package]
name = "authly"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
authly-common = { path = "../authly-common", features = [
    "document",
    "access_token",
    "tonic_server",
] }

anyhow = "1"
argon2 = "0.5"
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
bit-set = "0.8"
clap = { version = "4", features = ["derive"] }
cookie = "0.18"
figment = { version = "0.10", features = ["env"] }
fnv = "1"
hexhex = "1"
http = "1"
hiqlite = { git = "https://github.com/audunhalland/hiqlite.git", branch = "listen_notify_local", default-features = false, features = [
    "auto-heal",
    "listen_notify_local",
    "sqlite",
] }
indoc = "2"
itertools = "0.14"
hostname = "0.4"
hyper = { version = "1", default-features = false }
jsonwebtoken = "9"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = "0.98"
num-derive = "0.4"
num-traits = "0.2"
openraft = { version = "0.9", default-features = false }
pem = "3"
pest = "2"
pest_derive = "2"
rand = "0.8"
rcgen = { git = "https://github.com/rustls/rcgen.git", branch = "main", features = [
    "x509-parser",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "rustls-tls",
] }
rust-embed = { version = "8", features = ["debug-embed"] }
rustls = "0.23"
rustls-pemfile = "2"
rusqlite = "0.32"
sha2 = "0.10"
serde = "1"
serde_json = "1"
serde_spanned = "0.6"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7"
tonic = { version = "0.12", default-features = false }
tower = { version = "0.5", features = ["steer"] }
tower-server = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
] }
unsigned-varint = "0.8"
uuid = "1"
x509-parser = "0.16"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "authly_benches"
harness = false
