[package]
name = "authly-connect"
edition = "2021"
publish = false
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
authly-common = { workspace = true, features = ["tonic_server"] }
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
futures-util = "0.3"
http = "1"
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", features = ["tokio", "server", "http2"] }
rustls = { version = "0.23", default-features = false }
tokio = { version = "1" }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["io"] }
tonic = { version = "0.14", default-features = false }
tower = { version = "0.5", features = ["buffer", "steer"] }
tower-server.workspace = true
tracing = "0.1"
