[package]
name = "authly-db"
description = "Authly database abstraction library, traits working for hiqlite and sqlite"
edition = "2021"
publish = false
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
authly-common.workspace = true
bytemuck = { version = "1.21", features = ["extern_crate_alloc"] }
deadpool = "0.12"
hexhex = "1"
itertools = "0.14"
hiqlite.workspace = true
rusqlite = "0.33"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
