[package]
name = "authly-db"
description = "Authly database abstraction library, traits working for hiqlite and sqlite"
edition = "2021"
publish = false
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
authly-common.workspace = true
hexhex = "1"
itertools = "0.14"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
