[package]
name = "authly-sqlite"
description = "SQLite (rusqlite) implementation of authly-db"
edition = "2021"
publish = false
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
authly-db = { path = "../authly-db" }
deadpool = "0.12"
rusqlite = "0.33"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
