[package]
name = "authly-test-grpc"
edition = "2021"
publish = false
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
prost = "0.13"
tonic = { version = "0.13", default-features = false, features = [
    "prost",
    "codegen",
] }

[build-dependencies]
tonic-build = "0.13"
