[package]
name = "authly-test-grpc"
edition = "2021"
publish = false
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
prost = "0.14"
tonic = { version = "0.14", default-features = false, features = ["codegen"] }
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"
