[package]
name = "authly-web"
description = "Authly web apps"
edition = "2021"
publish = false
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
authly-domain = { path = "../authly-domain" }
authly-webstatic = { path = "../authly-webstatic" }
authly-common.workspace = true
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
anyhow = "1"
fnv = "1"
hexhex = "1"
http = "1"
indexmap = "2.7"
itertools = "0.14"
maud = { version = "0.26", features = ["axum"] }
rand = "0.8"
reqwest.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
url = "2.5"
