[package]
name = "authly-web"
description = "Authly web apps"
edition = "2021"
publish = false
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
authly-domain = { path = "../authly-domain" }
authly-webstatic = { path = "../authly-webstatic" }
authly-common.workspace = true
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
anyhow = "1"
fnv = "1"
hexhex = "1"
http = "1"
indexmap = "2.7"
indoc = "2"
itertools = "0.14"
maud = { version = "0.27", features = ["axum"] }
rand = "0.8"
reqwest.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde_plain = "1"
tokio = { version = "1", features = ["macros"] }
thiserror = "2"
time = "0.3"
tracing = "0.1"
url = "2.5"

[dev-dependencies]
authly-db = { path = "../authly-db" }
authly-test = { path = "../authly-test" }
test-log = { version = "0.2", features = ["trace"] }
wiremock = "0.6.2"
